--- a/themes/bigspring-light/layouts/partials/head.html
+++ b/themes/bigspring-light/layouts/partials/head.html
@@ -1,6 +1,6 @@
 <meta charset="utf-8">
-<!-- <title>{{.Title | default site.Title}}</title> -->
-<title>Webbsnickaren</title>
+<title>{{.Title | default site.Title}}</title>
+<!-- <title>Webbsnickaren</title> -->
 
 <!-- base url -->
 {{ if or (eq site.BaseURL "/") (eq site.BaseURL "http://localhost:1313/") (eq site.BaseURL "http://examplesite.org/") (eq site.BaseURL "https://examplesite.org/") (eq site.BaseURL "http://examplesite.com/") (eq site.BaseURL "https://examplesite.com/")}}{{else}}
