--- a/themes/bigspring-light/layouts/contact/list.html
+++ b/themes/bigspring-light/layouts/contact/list.html
@@ -3,7 +3,8 @@
 {{ partial "page-header.html" . }}
 <section class="section">
   <div class="container">
-    <div class="row">
+    <div class="row justify-content-center">
+      <!--
       <div class="col-lg-7 mb-4 mb-lg-0">
         <form action="{{ site.Params.contact_form_action | safeURL }}" method="POST">
           <input type="text" class="form-control mb-3" id="name" name="name" placeholder="{{ i18n `yourname` }}">
@@ -13,6 +14,7 @@
           <button type="submit" value="send" class="btn btn-primary">{{ i18n `sendnow` }}</button>
         </form>
       </div>
+    -->
       
       <div class="col-lg-5 content">
         {{ .Content }}
